saving work on home page

--- a/app/assets/stylesheets/site/layout.css.scss
+++ b/app/assets/stylesheets/site/layout.css.scss
@@ -5,25 +5,35 @@
 }
 
 div.site {
-  margin: 0 auto; width: 960px;
+  width: 960px; margin: 0 auto;
   div.header {
-    h1 { display: block; width: 960px; height: 97px; text-indent: -9999px; background: url(/assets/header.jpg) no-repeat center 0; }
+    h1 a { background: url(/assets/header.png) no-repeat 0 0; display: block; width: 960px; height: 72px; text-indent: -999px; }
   }
-  div.body { background: #DBDBDD url(/assets/body.png) repeat-y 0 0; @include rounded(10,10,10,10); overflow: hidden; margin: 0 0 10px; }
+  div.main { background: url(/assets/content.gif) repeat-x; }
+  div.body { background: #EDECEC url(/assets/body.gif) repeat-y; @include rounded(10px,10px,10px,10px); overflow: hidden; min-height: 300px; }
   div.sidebar {
-    float: left; width: 300px;
-    ul { width: 220px; }
-    a { font-size: 16px; line-height: 36px; color: #444;background: url(/assets/divider.jpg) no-repeat 0 bottom; padding: 5px 10px 15px 20px; display:block; width: 220px; }
+    float: left; width: 290px;
+    div.inner { padding: 30px; }
+    ul { margin: 0 0 20px; }
+    li {
+      background: url(/assets/divider.jpg) no-repeat 0 bottom;
+      a { display:  block; font-size: 16px; font-weight: normal; height: 36px; color: #444444; padding: 5px 10px 5px 30px; }
+      a:hover { color: #770; }
+    }
+    
   }
   div.content {
-    float: right; width: 660px;
-    h2 { margin: 0 0 20px; font-size: 26px; color: #252323; font-weight: normal; }
-    p { margin: 0 0 10px; }
-    li { font-size: 12px; line-height: 20px; padding: 0; margin: 0; }
-    ul, ol { padding: 0 0 0 15px; margin: 0 0 10px; }
-    ul li { list-style: disc; }
-    ol li { list-style: decimal; }
+    float: left; width: 670px;
+    div.inner { padding: 30px; }
+    h2 { font-size: 26px; margin: 0 0 30px; padding: 0; font-weight: normal; color: #000; }
+    h3 { color: #606711; font-size: 14px; padding: 0; }
+    p { margin: 0 0 20px; }
+    ul { margin: 0 0 0 20px; }
+    li { list-style: disc; }
+    table.small td { font-size: 11px; }
   }
-  div.inner { padding: 20px; }
-  div.footer { clear: both; text-align: center; }
+  div.footer {
+    padding: 20px;
+    p { text-align: center; }
+  }
 }
