--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -34,7 +34,7 @@
     </div>
   </div>
   <div class="footer">
-    <p>Copyright © <%= Date.today.strftime("%Y") %> Translating Time </p>
+    <p>Copyright <%= link_to '©', admin_dashboard_path %> <%= Date.today.strftime("%Y") %> Translating Time </p>
   </div>
 </div>
 
