--- a/app/views/tables/events.html.erb
+++ b/app/views/tables/events.html.erb
@@ -1,6 +1,6 @@
 <% content_for :content do %>
 
-  <a href="/tables">&laquo Back to tables</a>
+  <a href="/tables">&laquo Back to related tables</a>
   
   <h2><%= @process.name.capitalize %> Events</h2>
   
