--- a/app/views/tables/index.html.erb
+++ b/app/views/tables/index.html.erb
@@ -22,11 +22,18 @@
     </select>
   </p>
 
+  
+  <h3>Events</h3>
   <p>
-    <a href="/tables/events/limbic">Click here</a> for Limbic Events.<br />
-    <a href="/tables/events/cortical">Click here</a> for Cortical Events.<br />
-    <a href="/tables/abbreviations">Click here</a> for Abbreviations.
+    <select>
+      <option></option>
+      <% Location.all.each do |location| %>
+        <option value="/tables/events/<%= location.id %>"><%= location.name %></option>
+      <% end %>
+    </select>
   </p>
+
+  <p><a href="/tables/abbreviations">Click here</a> for Abbreviations.</p>
   
   <script>
     $(document).ready(function(){
