--- a/app/views/tables/events.html.erb
+++ b/app/views/tables/events.html.erb
@@ -2,7 +2,7 @@
 
   <a href="/tables">&laquo Back to related tables</a>
   
-  <h2><%= @location.name.capitalize %> Events</h2>
+  <h2><%= @location.name.titleize %> Events</h2>
   
   <table width="100%" class="referencetable">
     <thead>
