--- a/app/assets/stylesheets/site/tables.css.scss
+++ b/app/assets/stylesheets/site/tables.css.scss
@@ -1,6 +1,9 @@
 table.referencetable {
   th, td { padding: 5px; }
-  thead th { text-align: left; background: #000; color: #FFF; }
+  thead {
+    th { text-align: left; background: #000; color: #FFF; }
+    td { background-color: #CCC; text-align: center; }
+  }
   tbody {
     th, td { background: #FFF; }
     th { text-align: left; }
