--- a/app/views/site/predict.html.erb
+++ b/app/views/site/predict.html.erb
@@ -4,62 +4,52 @@
     
     <p>Please select two species, input the PC day you want translated from Species One to Species Two, and click the translate button.</p>
     
-    <form action="/translate" method="post">
+    <form action="/predict" method="post">
       
       <dl>
-        <dt>Species 1</dt>
-        <dd><%= select_tag :species_1, options_from_collection_for_select(Species.all, :id, :name), :include_blank => true %></dd>
-        <dt>Days</dt>
-        <dd class="days">
-          <div class="min">19.5</div>
-          <span>&lt;</span>
-          <%= text_field_tag :days %>
-          <span>&lt;</span>
-          <div class="max">40.6</div>
-        </dd>
-        <dt>Species 2</dt>
-        <dd><%= select_tag :species_2, options_from_collection_for_select(Species.all, :id, :name), :include_blank => true %></dd>
-        <dt>&nbsp;</dt>
-        <dd><input type="submit" value="TRANSLATE" /></dd>
+        <dt>Species</dt>
+        <dd><%= select_tag :species_id, options_from_collection_for_select(Species.in_model.order('name ASC').all, :id, :name, params[:species_id]), :include_blank => true %></dd>
+        <dt>Neural Event</dt>
+        <dd><%= select_tag :event_id, options_from_collection_for_select(Event.order('name ASC').all, :id, :name, params[:event_id]), :include_blank => true %></dd>
+        <dd><input type="submit" value="PREDICT" /></dd>
       </dl>
 
     </form>
     
     <% if request.post? %>
     
-      <table cellspacing="1" cellpadding="0">
-        <thead>
+      <table width="100%" class="referencetable">
+        <tr>
+          <th width="50%">Predicted Days</th>
+          <td width="50%"><%= @estimate.value %></td>
+        </tr>
+        <tr>
+          <th>Species</th>
+          <td><%= @species.name %></td>
+        </tr>
+        <tr>
+          <th>Event</th>
+          <td><%= @event.name %></td>
+        </tr>
+        <tr>
+          <th>95% Confidence Range</th>
+          <td><%= @estimate.low %> - <%= @estimate.high %></td>
+        </tr>
+        <% unless @gestation.nil? %>
           <tr>
-            <th rowspan="3">Event Name</th>
-            <th colspan="6">Predictions</th>
+            <th>Gestation</th>
+            <td><%= @gestation.value %></td>
           </tr>
+        <% end %>
+        <% unless @eyes.nil? %>
           <tr>
-            <td colspan="3">Ferret</td>
-            <td colspan="3">Guinnea Pig</td>
+            <th>Eye opening</th>
+            <td><%= @eyes.value %></td>
           </tr>
-          <tr>
-            <td>Lower CL</td>
-            <td>Prediction</td>
-            <td>Upper CL</td>
-            <td>Lower CL</td>
-            <td>Prediction</td>
-            <td>Upper CL</td>
-          </tr>
-        </thead>
-        <tbody>
-          <% @results.each do |result| %>
-            <tr>
-              <th><%= result.name %></th>
-              <td>42.5</td>
-              <td>48.9</td>
-              <td>56.5</td>
-              <td>33.9</td>
-              <td>39.3</td>
-              <td>45.7</td>
-            </tr>
-          <% end %>
-        </tbody>
+        <% end %>
       </table>
+      
+      <p>* Confidence intervals are for species averages rather than for individuals.</p>
 
     <% end %>
 
