--- a/app/views/site/translate.html.erb
+++ b/app/views/site/translate.html.erb
@@ -8,17 +8,17 @@
       
       <dl>
         <dt>Species 1</dt>
-        <dd><%= select_tag :species_1, options_from_collection_for_select(Species.all, :id, :name), :include_blank => true %></dd>
+        <dd><%= select_tag :species_1, options_from_collection_for_select(Species.all, :id, :name, params[:species_1]), :include_blank => true %></dd>
         <dt>Days</dt>
         <dd class="days">
           <div class="min">19.5</div>
           <span>&lt;</span>
-          <%= text_field_tag :days %>
+          <%= text_field_tag :days, params[:days] %>
           <span>&lt;</span>
           <div class="max">40.6</div>
         </dd>
         <dt>Species 2</dt>
-        <dd><%= select_tag :species_2, options_from_collection_for_select(Species.all, :id, :name), :include_blank => true %></dd>
+        <dd><%= select_tag :species_2, options_from_collection_for_select(Species.all, :id, :name, params[:species_2]), :include_blank => true %></dd>
         <dt>&nbsp;</dt>
         <dd><input type="submit" value="TRANSLATE" /></dd>
       </dl>
