--- a/app/assets/stylesheets/site/form.css.scss
+++ b/app/assets/stylesheets/site/form.css.scss
@@ -13,3 +13,17 @@ div.flash {
   &.error span { color: #FFF;  }
   &.error span:hover { background-color: #900; color: #FFF; }
 }
+
+div.translate {
+  h2 { margin: 0 0 20px !important; }
+  form#translate {
+    margin: 0 0 10px;
+    dt { color: #000; font-weight: bold; }
+    dd { margin: 0 0 10px; }
+    dd.days {
+      overflow: hidden;
+      input, span { float: left; margin: 0 5px 0 0; }
+      input { width: 40px; }
+    }
+  }
+}
