--- a/app/views/site/translate.html.erb
+++ b/app/views/site/translate.html.erb
@@ -4,29 +4,37 @@
     
     <p>Please select two species, input the PC day you want translated from Species One to Species Two, and click the translate button.</p>
     
-    <form action="/translate" method="post">
+    <form action="/translate" method="post" id="translate">
       
       <dl>
         <dt>Species 1</dt>
-        <dd><%= select_tag :species_1, options_from_collection_for_select(Species.all, :id, :name, params[:species_1]), :include_blank => true %></dd>
+        <dd><%= render 'species', :key => 'species_1', :value => params[:species_1] %>
+        <dt>Location</dt>
+        <dd><%= select_tag :location, options_from_collection_for_select(Location.all, :id, :name, params[:location]), :include_blank => true %></dd>
+        <dt>Process</dt>
+        <dd><%= select_tag :process, options_from_collection_for_select(Proces.all, :id, :name, params[:process]), :include_blank => true %></dd>
         <dt>Days</dt>
         <dd class="days">
-          <div class="min">19.5</div>
+          <%= text_field_tag :min, ((@species1.nil?) ? '' : @species1.minimum) %>
           <span>&lt;</span>
           <%= text_field_tag :days, params[:days] %>
           <span>&lt;</span>
-          <div class="max">40.6</div>
+          <%= text_field_tag :max, ((@species1.nil?) ? '' : @species1.maximum) %>
         </dd>
         <dt>Species 2</dt>
-        <dd><%= select_tag :species_2, options_from_collection_for_select(Species.all, :id, :name, params[:species_2]), :include_blank => true %></dd>
-        <dt>&nbsp;</dt>
+        <dd><%= render 'species', :key => 'species_2', :value => params[:species_2] %></dd>
+        <dt></dt>
         <dd><input type="submit" value="TRANSLATE" /></dd>
       </dl>
 
     </form>
     
     <% if request.post? %>
-    
+      
+      <h2>Results</h2>
+      
+      <p>An event in <strong><%= @species1.name %></strong> at PC Day <%= params[:days] %> translates into <strong>PC Day <%= number_with_precision(@translation, :precision => 1) %></strong> in <strong><%= @species2.name %></strong>.</p>
+
       <h2>Species Predictions</h2>
     
       <table width="100%" class="referencetable">
