changes to form display

--- a/app/views/site/_species.html.erb
+++ b/app/views/site/_species.html.erb
@@ -4,4 +4,4 @@
     <option value="<%= species.id %>" data-min="<%= species.minimum %>" data-max="<%= species.maximum %>" <%= (value == species.id.to_s) ? raw('selected="selected"') : '' %>><%= species.name %></option>
   <% end %>
 </select> 
-[ Minimum: <span class="min">10</span> - Maximum: <span class="max">230</span> ]
+<span class="range"></span>
