--- a/app/views/site/translate.html.erb
+++ b/app/views/site/translate.html.erb
@@ -23,9 +23,10 @@
         </dd>
         <dt>Species 2</dt>
         <dd><%= render 'species', :key => 'species_2', :value => params[:species_2] %></dd>
-        <dt></dt>
-        <dd><input type="submit" value="TRANSLATE" /></dd>
       </dl>
+      <div class="buttons">
+        <input type="submit" value="TRANSLATE" />
+      </div>
 
     </form>
     
