--- a/app/views/site/translate.html.erb
+++ b/app/views/site/translate.html.erb
@@ -8,21 +8,21 @@
       
       <dl>
         <dt>Species 1</dt>
-        <dd><%= render 'species', :key => 'species_1', :value => params[:species_1] %>
+        <dd><%= render 'species', :key => 'species_1', :value => params[:translation][:species_1] %>
         <dt>Location</dt>
-        <dd><%= select_tag :location, options_from_collection_for_select(Location.all, :id, :name, params[:location]), :include_blank => true %></dd>
+        <dd><%= select_tag 'translation[location]', options_from_collection_for_select(Location.all, :id, :name, params[:translation][:location]), :include_blank => true %></dd>
         <dt>Process</dt>
-        <dd><%= select_tag :process, options_from_collection_for_select(Proces.all, :id, :name, params[:process]), :include_blank => true %></dd>
+        <dd><%= select_tag 'translation[process]', options_from_collection_for_select(Proces.all, :id, :name, params[:translation][:process]), :include_blank => true %></dd>
         <dt>Days</dt>
         <dd class="days">
-          <%= text_field_tag :min, ((@species1.nil?) ? '' : @species1.minimum) %>
+          <%= text_field_tag 'translation[min]', params[:translation][:min] %>
           <span>&lt;</span>
-          <%= text_field_tag :days, params[:days] %>
+          <%= text_field_tag 'translation[days]', params[:translation][:days] %>
           <span>&lt;</span>
-          <%= text_field_tag :max, ((@species1.nil?) ? '' : @species1.maximum) %>
+          <%= text_field_tag 'translation[max]', params[:translation][:max] %>
         </dd>
         <dt>Species 2</dt>
-        <dd><%= render 'species', :key => 'species_2', :value => params[:species_2] %></dd>
+        <dd><%= render 'species', :key => 'species_2', :value => params[:translation][:species_2] %></dd>
       </dl>
       <div class="buttons">
         <input type="submit" value="TRANSLATE" />
@@ -30,11 +30,11 @@
 
     </form>
     
-    <% if request.post? %>
+    <% if @translation.valid? %>
       
       <h2>Results</h2>
       
-      <p>An event in <strong><%= @species1.name %></strong> at PC Day <%= params[:days] %> translates into <strong>PC Day <%= number_with_precision(@translation, :precision => 1) %></strong> in <strong><%= @species2.name %></strong>.</p>
+      <p>An event in <strong><%= @species1.name %></strong> at PC Day <%= params[:translation][:days] %> translates into <strong>PC Day <%= number_with_precision(@result, :precision => 1) %></strong> in <strong><%= @species2.name %></strong>.</p>
 
       <h2>Species Predictions</h2>
     
