--- a/app/assets/stylesheets/site/form.css.scss
+++ b/app/assets/stylesheets/site/form.css.scss
@@ -13,6 +13,12 @@ div.flash {
   &.error span { color: #FFF;  }
   &.error span:hover { background-color: #900; color: #FFF; }
 }
+
+div.results {
+  border: 1px solid #E2C822; background: #FFF9D7; padding: 10px; margin: 20px 0;
+  p { margin: 0 !important; color: #000; text-align: center; }
+}
+
 form {
   margin: 0 0 10px; background: #CCC; overflow: hidden;
   dl { margin: 10px 20px; }
