--- a/app/views/site/_species.html.erb
+++ b/app/views/site/_species.html.erb
@@ -1,6 +1,6 @@
 <select id="<%= key %>" name="translation[<%= key %>]">
   <option></option>
-  <% Species.all.each do |species| %>
+  <% Species.in_model.all.each do |species| %>
     <option value="<%= species.id %>" data-min="<%= species.minimum %>" data-max="<%= species.maximum %>" <%= (value == species.id.to_s) ? raw('selected="selected"') : '' %>><%= species.name %></option>
   <% end %>
 </select> 
