fixing brandon kersh

--- a/app/views/admin/citations/_form.html.erb
+++ b/app/views/admin/citations/_form.html.erb
@@ -1,4 +1,4 @@
-<%= f.text_area_control @citation, :body, { :required => true }, { :rows => 5 } %>
+<%= f.text_area_control @citation, :body, { :required => true, :text => "Full citation" }, { :rows => 5 } %>
 
 <%= f.text_field_control @citation, :title, { :required => true } %>
 
