--- a/app/views/site/predict.html.erb
+++ b/app/views/site/predict.html.erb
@@ -22,39 +22,46 @@
     
     <% if request.post? %>
     
-      <table width="100%" class="referencetable">
-        <tr>
-          <th width="50%">Predicted Days</th>
-          <td width="50%"><%= format_value(@estimate.value) %></td>
-        </tr>
-        <tr>
-          <th>Species</th>
-          <td><%= @species.name %></td>
-        </tr>
-        <tr>
-          <th>Event</th>
-          <td><%= @event.name %></td>
-        </tr>
-        <tr>
-          <th>95% Confidence Range <span class="asterix">*</span></th>
-          <td><%= format_value(@estimate.low) %> - <%= format_value(@estimate.high) %></td>
-        </tr>
-        <% unless @gestation.nil? %>
+      <% unless @estimate.nil? %>
+    
+        <table width="100%" class="referencetable">
           <tr>
-            <th>Gestation</th>
-            <td><%= format_value(@gestation.value) %></td>
+            <th width="50%">Predicted Days</th>
+            <td width="50%"><%= format_value(@estimate.value) %></td>
           </tr>
-        <% end %>
-        <% unless @eyes.nil? %>
           <tr>
-            <th>Eye opening</th>
-            <td><%= format_value(@eyes.value) %></td>
+            <th>Species</th>
+            <td><%= @species.name %></td>
           </tr>
-        <% end %>
-      </table>
-      
-      <p><span class="asterix">*</span> Confidence intervals are for species averages rather than for individuals.</p>
-
+          <tr>
+            <th>Event</th>
+            <td><%= @event.name %></td>
+          </tr>
+          <tr>
+            <th>95% Confidence Range <span class="asterix">*</span></th>
+            <td><%= format_value(@estimate.low) %> - <%= format_value(@estimate.high) %></td>
+          </tr>
+          <% unless @gestation.nil? %>
+            <tr>
+              <th>Gestation</th>
+              <td><%= format_value(@gestation.value) %></td>
+            </tr>
+          <% end %>
+          <% unless @eyes.nil? %>
+            <tr>
+              <th>Eye opening</th>
+              <td><%= format_value(@eyes.value) %></td>
+            </tr>
+          <% end %>
+        </table>
+        
+        <p><span class="asterix">*</span> Confidence intervals are for species averages rather than for individuals.</p>
+  
+      <% else %>
+        <div class="results">
+          <p>We can't predict <strong><%= @event.name %></strong> for the <strong><%= @species.name %></strong></p>
+        </div>
+      <% end %>
     <% end %>
 
   </div>
