--- a/app/assets/stylesheets/site/reset.css.scss
+++ b/app/assets/stylesheets/site/reset.css.scss
@@ -5,6 +5,7 @@ body.waiting { cursor: wait; }
 textarea {font-family: Tahoma,Geneva,sans-serif; }
 img { border: none; }
 a { text-decoration: none; outline: none; color: #770; }
+a:hover { text-decoration: underline; color: #06F; }
 p, input, textarea, select, dt, dd, li, td, th { font-size: 12px; line-height: 18px; color: #666; }
 textarea { font-size: 12px; line-height: 22px; }
 li { font-size: 12px; line-height: 22px; }
