--- a/app/views/site/translate.html.erb
+++ b/app/views/site/translate.html.erb
@@ -12,9 +12,23 @@
         <dt>Species 1</dt>
         <dd><%= render 'species', :key => 'species_1', :value => params[:translation][:species_1] %>
         <dt>Process</dt>
-        <dd><%= select_tag 'translation[process]', options_from_collection_for_select(Proces.all, :id, :name, params[:translation][:process]), :include_blank => true %></dd>
+        <dd>
+          <%= select_tag 'translation[process]', options_from_collection_for_select(Proces.all, :id, :name, params[:translation][:process]), :include_blank => true %>
+          <% unless @translation.errors[:process].empty? %>
+            <div class="error">
+              <%= @translation.errors[:process].first %>
+            </div>
+          <% end %>
+        </dd>
         <dt>Location</dt>
-        <dd><%= select_tag 'translation[location]', options_from_collection_for_select(Location.all, :id, :name, params[:translation][:location]), :include_blank => true %></dd>
+        <dd>
+          <%= select_tag 'translation[location]', options_from_collection_for_select(Location.all, :id, :name, params[:translation][:location]), :include_blank => true %>
+          <% unless @translation.errors[:location].empty? %>
+            <div class="error">
+              <%= @translation.errors[:location].first %>
+            </div>
+          <% end %>
+        </dd>
         <dt>Days</dt>
         <dd class="days">
           <%= text_field_tag 'translation[min]', params[:translation][:min] %>
@@ -22,9 +36,16 @@
           <%= text_field_tag 'translation[days]', params[:translation][:days] %>
           <span>&lt;</span>
           <%= text_field_tag 'translation[max]', params[:translation][:max] %>
+          <% unless @translation.errors[:days].empty? %>
+            <div class="error">
+              <%= @translation.errors[:days].first %>
+            </div>
+          <% end %>
         </dd>
         <dt>Species 2</dt>
-        <dd><%= render 'species', :key => 'species_2', :value => params[:translation][:species_2] %></dd>
+        <dd>
+          <%= render 'species', :key => 'species_2', :value => params[:translation][:species_2] %>
+        </dd>
       </dl>
       <div class="buttons">
         <input type="submit" value="TRANSLATE" />
@@ -32,7 +53,9 @@
 
     </form>
     
-    <% if @translation.valid? %>
+    <% if request.post? && @translation.valid? %>
+
+      <p class="warning"><strong>* NOTE:</strong> All values represent days post conception, not post natal</p>
 
       <div class="results">
 
