--- a/app/views/site/feedback.html.erb
+++ b/app/views/site/feedback.html.erb
@@ -1,11 +1,10 @@
 <% content_for :content do %>
 
+    <h2>Feedback</h2>
+
   <%= form_for @inquiry, { :url => feedback_path } do |f| -%>
 
     <div class="form">
-      <div class="form-header">
-        <h2>Feedback</h2>
-      </div>
       <div class="form-body">
         <dl>
           <%= f.text_field_control @inquiry, :name %>
@@ -14,7 +13,7 @@
           <%= f.text_area_control @inquiry, :comments, {}, { :rows => 5 } %>
         </dl>
       </div>
-      <div class="form-footer">
+      <div class="buttons">
         <%= f.submit 'Send Feedback', :class => 'button' %>
       </div>
     </div>
