--- a/app/views/site/predict.html.erb
+++ b/app/views/site/predict.html.erb
@@ -48,7 +48,7 @@
           </tr>
           <tr>
             <th>Gestation</th>
-            <td><%= format_value(@species.gestation) %></td>
+            <td><%= @species.gestation %></td>
           </tr>
         </table>
         
