--- a/app/views/admin/observations/index.html.erb
+++ b/app/views/admin/observations/index.html.erb
@@ -61,6 +61,7 @@
                   <td><%= observation.species.name %></td>
                   <td><%= observation.event.name %></td>
                   <td><%= link_to observation.value, edit_admin_observation_path(observation) %></td>
+                  <td><%= link_to 'delete', delete_admin_observation_path(observation) %></td>
                 </tr>
               <% end -%>
             <% else -%>
