--- a/app/views/admin/dashboard/index.html.erb
+++ b/app/views/admin/dashboard/index.html.erb
@@ -40,7 +40,8 @@
     <section>
       <h2>Data Processing</h2>
       <ul>
-        <li><%= link_to 'Export Observations', export_admin_observations_path(:format => 'txt') %></li>
+        <li><%= link_to 'Export Observations', export_admin_observations_path(:format => 'txt') %> (with codes)</li>
+        <li><%= link_to 'Export Observations', export_admin_observations_path(:format => 'csv') %> (with labels)</li>
         <li><%= link_to 'Manage Estimates', admin_estimates_path %></li>
       </ul>
     </section>
