--- a/app/views/admin/observations/index.html.erb
+++ b/app/views/admin/observations/index.html.erb
@@ -49,9 +49,11 @@
         <table>
           <thead>
             <tr>
-              <th width="45%">Species</th>
-              <th width="45%">Event</th>
+              <th width="35%">Species</th>
+              <th width="35%">Event</th>
               <th width="10%">Value</th>
+              <th width="10%">Curated</th>
+              <th width="10%">Actions</th>
             </tr>
           </thead>
           <tbody>
@@ -61,12 +63,23 @@
                   <td><%= observation.species.name %></td>
                   <td><%= observation.event.name %></td>
                   <td><%= link_to observation.value, edit_admin_observation_path(observation) %></td>
-                  <td><%= link_to 'delete', delete_admin_observation_path(observation) %></td>
+                  <td align="center">
+                    <% if observation.is_active -%>
+                      <span class="yes">YES</span>
+                    <% else -%>
+                      <span class="no">NO</span>
+                    <% end -%>
+                  </td>
+                  <td align="center">
+                    <% unless observation.is_active %>
+                      <%= link_to 'delete', admin_observation_path(observation), :class => 'delete' %>
+                    <% end %>
+                  </td>
                 </tr>
               <% end -%>
             <% else -%>
               <tr>
-                <td colspan="3">There are no observations</td>
+                <td colspan="5">There are no observations</td>
               </tr>
             <% end -%>
           </tbody>
