delete and move and tab seperated export

--- a/app/assets/stylesheets/admin/form.css.scss
+++ b/app/assets/stylesheets/admin/form.css.scss
@@ -36,6 +36,7 @@ div.form {
     dt, dd { float: left; margin: 0 0 10px; }
     dl { overflow: hidden; padding: 10px; }
     p { padding: 10px; }
+    ul { padding: 10px; }
     dt { clear: both; width: 150px; font-weight: bold; }
     dd { width: 790px; }
     ul.checkboxes {
