--- a/app/views/admin/species/index.html.erb
+++ b/app/views/admin/species/index.html.erb
@@ -7,12 +7,6 @@
   <% form_tag batch_admin_species_index_path do |f| %>
     <div class="grid">
       <div class="grid-header">
-        <div class="actions">
-          <select name="type">
-            <option>Choose an Action</option>
-            <option value="destroy">Delete</option>
-          </select>
-        </div>
         <ul>
           <li><%= link_to "+ Add New", new_admin_species_path %></li>
         </ul>
@@ -21,17 +15,16 @@
         <table>
           <thead>
             <tr>
-              <th width="3%"><%= check_box_tag 'checkall' %></th>
-              <th width="67%">Species</th>
+              <th width="60%">Species</th>
               <th width="20%">Code</th>
               <th width="10%">In Model</th>
+              <th width="10%">Action</th>
             </tr>
           </thead>
           <tbody>
             <% unless @species.empty? %>
               <% @species.each do |species| -%>
                 <tr class="<%= cycle('odd', 'even') %>">
-                  <td><%= check_box_tag 'item[]', species.id %></td>
                   <td><%= link_to species.name, edit_admin_species_path(species) %></td>
                   <td><%= species.code %></td>
                   <td>
@@ -41,6 +34,7 @@
                       <span class="no">NO</span>
                     <% end %>
                   </td>
+                  <td align="center"><%= link_to 'delete', delete_admin_species_path(species) %></td>
                 </tr>
               <% end -%>
             <% else -%>
