--- a/app/views/admin/observations/export.csv.erb
+++ b/app/views/admin/observations/export.csv.erb
@@ -1,3 +1,3 @@
-<% @species.each do |species| %>,<%= species.name %><% end %>
-<% @events.each do |event| %><%= event.name %><% @species.each do |species| %><% if @grid.has_key?(species.id) %><% if @grid[species.id].has_key?(event.id) %>,<%= number_with_precision(@grid[species.id][event.id], :precision => 1) %><% else %>,<% end %><% end %><% end %>
+<% @species.each do |species| %><%= "\u0009" %><%= species.name %><%= "\u0009" %>Citation<% end %>
+<% @events.each do |event| %><%= event.name %><% @species.each do |species| %><% if @grid.has_key?(species.id) %><% if @grid[species.id].has_key?(event.id) %><%= "\u0009" %><%= number_with_precision(@grid[species.id][event.id].value, :precision => 1) %><%= "\u0009" %><%= @grid[species.id][event.id].citation.body %><% else %><%= "\u0009\u0009" %><% end %><% end %><% end %>
 <% end %>
